# CogniCal

./: .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .lintstagedrc.json  CACHE_CLEAR_FEATURE.md  CHANGELOG.md  CLEANUP-COMPLETE.md  CogniCal.md  DEEPSEEK_KEY_FIX.md  EMBEDDED_PYTHON_QUICKSTART.md  GIT_GUIDE.md  LICENSE  ONBOARDING_FIXES_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  eslint.config.js  package.json  package.pre-bootstrap.json  playwright.config.ts  pnpm-lock.yaml  setup_python.ps1  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
.husky/_/: husky.sh
.roo/: mcp.json
.spec-workflow/: session.json
.spec-workflow/steering/: README.md  product.md  structure.md  tech.md
.spec-workflow/user-feedback/: issues-and-solutions.md
docs/: AI_AGENT_DEVELOPER_GUIDE.md  AI_AGENT_IMPLEMENTATION_SUMMARY.md  AI_AGENT_SETUP.md  AI_AGENT_TEST_REPORT.md  AI_AGENT_USER_GUIDE.md  CALENDAR_FEATURE.md  CHAT_FEATURE.md  CORRECT_PYTHON_SOLUTION.md  EMBEDDED_PYTHON_GUIDE.md  EMBEDDED_PYTHON_IMPLEMENTATION.md  EMBEDDED_PYTHON_SETUP.md  RUNTIME_FIX_SUMMARY.md  TOOL_CALLING_FIX.md
e2e/: ai-agent.e2e.ts  ai.e2e.ts  analytics.e2e.ts  help-center.e2e.ts  phase4-productivity.e2e.ts  planning.e2e.ts  smoke.e2e.ts  smoke.spec.ts
scripts/: prepare-husky.mjs  setup_embedded_python.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/memory/2025/10/: 47dc37f8-134e-4900-9d16-3e4fbed117b1.md  e9eb9536-9a20-4617-973f-b66f8d6143fc.md
src-tauri/exports/conversation-conv-1761139276623-y8tz736-1761139586879.zip/: export_info.json  metadata.json
src-tauri/exports/conversation-conv-1761139276623-y8tz736-1761139586879.zip/2025/10/: 2a19ef24-082f-494a-80a0-e6e167f29586.md  4095fd26-9fc4-4766-b8e2-a3abed372882.md  8ba28f7a-1e83-4bbe-b66f-5cb33d2a2e4d.md  e9950993-f102-45eb-8d2b-756a643ed2d5.md  efbaa943-af98-4cd3-8897-4cbb0a31f712.md  f5cb9021-db0e-4885-b53f-e8c009a2f28c.md
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src-python/: main.py
src-tauri/src/commands/: ai.rs  ai_commands.rs  analytics.rs  cache.rs  community.rs  dependency_commands.rs  feedback.rs  goal_commands.rs  mod.rs  planning.rs  recurring_commands.rs  settings.rs  task.rs  wellness.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.sql
src-tauri/src/db/repositories/: ai_feedback_repository.rs  ai_settings_repository.rs  analytics_repository.rs  community_export_repository.rs  mod.rs  planning_repository.rs  productivity_repository.rs  settings_repository.rs  task_repository.rs  wellness_repository.rs  workload_repository.rs
src-tauri/src/models/: ai.rs  ai_feedback.rs  ai_types.rs  analytics.rs  community_export.rs  dependency.rs  goal.rs  memory.rs  mod.rs  planning.rs  productivity.rs  recurring_task.rs  settings.rs  task.rs  wellness.rs  workload.rs
src-tauri/src/services/: ai_agent_service.rs  ai_cache.rs  ai_service.rs  analytics_service.rs  behavior_learning.rs  cache_service.rs  community_service.rs  cot_engine.rs  dependency_service.rs  feedback_service.rs  goal_service.rs  instance_generator.rs  memory_service.rs  mod.rs  planning_service.rs  productivity_score_service.rs  prompt_templates.rs  recurring_task_service.rs  rrule_parser.rs  schedule_optimizer.rs  schedule_service.rs  schedule_utils.rs  settings_service.rs  streaming.rs  task_instance_service.rs  task_service.rs  tool_registry.rs  wellness_service.rs  workload_forecast_service.rs
src-tauri/src/tools/: calendar_tools.rs  dependency_tools.rs  goal_tools.rs  mod.rs  recurring_task_tools.rs  task_tools.rs  time_management_tools.rs
src-tauri/src/utils/: cot.rs  crypto.rs  logger.rs  mod.rs  redact.rs  semantic.rs
src-tauri/tests/: agent_commands_tests.rs  ai_agent_service_tests.rs  ai_commands_tests.rs  ai_service_tests.rs  calendar_tools_tests.rs  database_schema_tests.rs  dependency_service_tests.rs  memory_service_tests.rs  task_tools_tests.rs  tool_registry_tests.rs
src-tauri/tests/integration/: ai_parse.rs  analytics_flow.rs  comprehensive_integration_tests.rs  e2e_workflows.rs  error_handling_tests.rs  feedback_tests.rs  performance_benchmarks.rs  phase4_data_schema.rs  planning_flow.rs  task_service_tests.rs  wellness_tests.rs  workload_forecast_tests.rs
src/__tests__/: HelpCenterDialog.test.tsx  TaskAiParsePanel.test.tsx  TaskPlanningPanel.test.tsx  analyticsStore.test.ts  dashboard.integration.test.tsx  onboardingStore.test.ts  planningStore.test.ts  smoke.test.ts  taskStore.test.ts  useTaskForm.test.tsx
src/hooks/: useAI.ts  useAnalytics.ts  useCommunity.ts  useDashboardConfig.ts  useDependencies.ts  useFeedback.ts  useGoals.ts  useKeyboardShortcuts.ts  usePlanning.ts  useProductivityScore.ts  useRecurringTasks.ts  useTaskForm.ts  useTasks.ts  useWellness.ts  useWorkloadForecast.ts
src/pages/: Calendar.tsx  Chat.tsx  Dashboard.tsx  Goals.tsx  MemoryManagement.tsx  PythonTest.tsx  Settings.tsx  Tasks.tsx
src/providers/: query-client-provider.tsx  theme-provider.tsx  toast-provider.tsx
(+245 files in other folders)
