[package]
name = "cognical-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cognical_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
keyring = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
httpmock = "0.7"

[[test]]
name = "planning_flow"
path = "tests/integration/planning_flow.rs"

[[test]]
name = "analytics_flow"
path = "tests/integration/analytics_flow.rs"

[[test]]
name = "phase4_data_schema"
path = "tests/integration/phase4_data_schema.rs"

[[test]]
name = "workload_forecast_tests"
path = "tests/integration/workload_forecast_tests.rs"

[[test]]
name = "wellness_tests"
path = "tests/integration/wellness_tests.rs"

[[test]]
name = "feedback_tests"
path = "tests/integration/feedback_tests.rs"

[[test]]
name = "ai_service_tests"
path = "tests/ai_service_tests.rs"

[[test]]
name = "ai_commands_tests"
path = "tests/ai_commands_tests.rs"

